# demo-py

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  COPILOT_INSTRUCTIONS.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  pytest.ini  quickstart.sh
scripts/: README.md  check_changelog.sh  update_changelog.sh
src/: main.py
src/airflow/dags/: example_dag.py
src/config/: settings.py
src/services/: health_service.py  item_service.py
src/utilities/: string_utils.py
templates/: generate_project.py
tests/: test_main.py
tests/airflow/: __init__.py
tests/airflow/dags/: test_example_dag.py
tests/config/: test_settings.py
tests/services/: test_health_service.py  test_item_service.py
tests/utilities/: test_string_utils.py
